Fixed latest page box aligning to the left... again

--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ sub {
     border-style: double;
     border-width: 3px;
     border-color: #ffffff;
-    display: inline-block;
     padding: 4px;
     margin-top: 4px;
 }
